--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <section id="top_header" class="bg-dark py-3">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 pt-2 text-white text-center">
+                    <div class="col-md-4 pt-2 text-white text-center" id="phone">
                         <h6>
                             <i class="bi bi-phone"></i> +123 456 78 90
                         </h6>
                     </div>
-                    <div class="col-md-4 pt-2 text-white text-center">
+                    <div class="col-md-4 pt-2 text-white text-center" id="email">
                         <h6>
                             <i class="bi bi-envelope"></i> user@domain.com
                         </h6>
