--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                             <i class="bi bi-phone"></i> +123 456 78 90
                         </h6>
                     </div>
-                    <div class="col-md-4 pt-2 text-white text-center" id="header_email">
+                    <div class="col-md-4 pt-2 text-white text-center">
                         <h6>
                             <i class="bi bi-envelope"></i> user@domain.com
                         </h6>
