--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
             </div>
         </section>
 
-        <nav class="navbar navbar-expand-md bg-primary navbar-dark py-3 sticky-top">
-            <div class="container">
+        <nav class="navbar navbar-expand-md bg-primary navbar-dark py-3 sticky-top w-100 d-flex justify-content-center">
+            <div class="container bg-dark">
                 <a href="#" class="navbar-brand">Learn Code</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            </div>
-            <div id="navMenu" class="collapse navbar-collapse">
+                <div id="navMenu" class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
@@ -69,6 +68,8 @@
                     </li>
                 </ul>
             </div>
+            </div>
+
         </nav>
     </header>
 
