--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
 
         <nav class="navbar navbar-expand-md bg-primary navbar-dark py-3 sticky-top w-100 d-flex justify-content-center">
-            <div class="container bg-dark">
+            <div class="container">
                 <a href="#" class="navbar-brand">Learn Code</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navMenu">
                     <span class="navbar-toggler-icon"></span>
