--- a/index.html
+++ b/index.html
@@ -49,8 +49,17 @@
                 <div id="navMenu" class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto">
                         <div class="row">
-                            <div class="col-6"></div>
-                            <div class="col-6"></div>
+                            <div class="col-6">
+                                <li class="nav-item">
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+
+                            </div>
+                            <div class="col-6">
+                                <li class="nav-item">
+                            <a href="#about" class="nav-link">About</a>
+                        </li>
+                            </div>
                         </div>
                         <li class="nav-item">
                             <a href="#service" class="nav-link">Service</a>
