--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                 </button>
                 <div id="navMenu" class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto">
-                        <div class="row">
-                            <div class="col-6">
+                        <div class="row justify-content-center">
+                            <div class="col-4">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">Home</a>
+                                    <a href="#" class="nav-link text-center">Home</a>
                                 </li>
                             </div>
-                            <div class="col-6">
+                            <div class="col-4">
                                 <li class="nav-item">
-                                    <a href="#about" class="nav-link">About</a>
+                                    <a href="#about" class="nav-link text-center">About</a>
                                 </li>
                             </div>
                         </div>
