--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
                                 <a href="#analysis" class="nav-link">Analysis</a>
                             </li>
                         </div>
-                        <li class="nav-item">
-                            <a href="#team" class="nav-link">Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#contact" class="nav-link">Contact</a>
-                        </li>
+                        <div class="row justify-content-center">
+                            <li class="nav-item">
+                                <a href="#team" class="nav-link">Team</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#contact" class="nav-link">Contact</a>
+                            </li>
+                        </div>
                     </ul>
                 </div>
             </div>
