--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <li class="nav-item">
-                                <a href="#team" class="nav-link">Team</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#contact" class="nav-link">Contact</a>
-                            </li>
+                            <div class="col-4">
+                                <li class="nav-item">
+                                    <a href="#team" class="nav-link">Team</a>
+                                </li>
+                            </div>
+                            <div class="col-4">
+                                <li class="nav-item">
+                                    <a href="#contact" class="nav-link">Contact</a>
+                                </li>
+                            </div>
                         </div>
                     </ul>
                 </div>
