--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </button>
                 <div id="navMenu" class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto">
-                        <div class="row justify-content-center">
+                        <div class="row justify-content-center my-2">
                             <div class="col-4">
                                 <li class="nav-item">
                                     <a href="#" class="nav-link text-center">Home</a>
