--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 </li>
                             </div>
                         </div>
-                        <div class="row justify-content-center">
+                        <div class="row justify-content-center my-2">
                             <div class="col-4">
                                 <li class="nav-item">
                                     <a href="#team" class="nav-link text-center">Team</a>
